--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=3000
 # For local dev: mongodb://localhost:27017/fullstack_quick
 # For production: use your MongoDB Atlas connection string (replace <user>,<pass>,<cluster>)
-MONGO_URI=mongodb+srv://monogoDB:6130bTBJaIxB9zP4@cluster0.kssyj4x.mongodb.net/?appName=Cluster0
+MONGO_URI=
 
 # Use a long random string for JWT_SECRET in production
 JWT_SECRET=change_this_to_a_long_random_string
